assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Neucha&display=swap');

.navbar{
      position:absolute;
      width:100%;
      z-index:10;
      max-width:100%;
}

.navbar .navbar-brand {
    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
    font-size: 36px;
    font-weight: bold;
}


.navbar-custom {
    font-family: "Amatic SC", sans-serif;
}

.nav-item {
    font-size: 18px;
    font-weight: bold;
}

#carouselMain {
padding: 0%;
}

.home-text {
    font-family: "Neucha", sans-serif;
    font-size: 14px;
    position: absolute;
    letter-spacing: 0.05em;
    top: 200px;
    color: rgba(21, 209, 177, 1);
    z-index: 1000;
}

.home-col {
    padding-top: 20px;
    padding-bottom: 20px;
    background-color: rgba(0, 0, 0, 0.75);

    border-top: solid;
    border-right: solid;
    border-bottom: solid;

    border-top-right-radius: 25px;
    border-bottom-right-radius: 25px;

    border-width: 1px;

    border-color: rgba(21, 209, 177, 1);
}

.btn-custom-ed {
    background-color: rgba(240, 117, 24, 1);
    border-color: rgba(255, 255, 255, 1);
    border-width: 0.5px;
}

.btn-custom-ed:hover {
    background-color: rgba(255, 255, 255, 1);
    border-color: rgba(240, 117, 24, 1);
    border-width: 0.5px;
}

.btn-custom-attr {
    background-color: rgba(171, 72, 196, 1);
    border-color: rgba(255, 255, 255, 1);
    border-width: 0.5px;
}

.btn-custom-attr:hover {
    background-color: rgba(255, 255, 255, 1);
    border-color: rgba(171, 72, 196, 1);
    border-width: 0.5px;
}

.btn-custom {
    background-color: rgba(21, 209, 177, 1);
    border-color: rgba(255, 255, 255, 1);
    border-width: 0.5px;
}

.btn-custom:hover {
    background-color: rgba(255, 255, 255, 1);
    border-color: rgba(21, 209, 177, 1);
    border-width: 0.5px;
}

.hr-custom {
    background-color:rgba(255, 255, 255, 1);
    margin: 0;
}

#map-section {
    font-family: "Neucha", sans-serif;
    height: 100vh;

    background: url("../images/map-bg.jpg") no-repeat center center fixed;
    display: flex;
    justify-content: center;
}

.map-padding {
    padding-left: 0;
    padding-right: 0;
}

#map {
    width: 100%;
    height: 88%;
    border-top: solid;
    border-bottom: solid;
    border-color: rgba(255, 255, 255, 1);
    border-width: 1px;
}

.main-content {
    background-color: rgba(21, 209, 177, 1);
    font-family: "Neucha", sans-serif;
    letter-spacing: 0.05em;
    padding: 20px;
}

.eatdrink-content {
    background-color: rgba(240, 117, 24, 1);
    font-family: "Neucha", sans-serif;
    letter-spacing: 0.05em;
    padding: 20px;
}

.attr-content {
    background-color: rgba(171, 72, 196, 1);
    font-family: "Neucha", sans-serif;
    letter-spacing: 0.05em;
    padding: 20px;
}

.contact-section {
    font-family: "Neucha", sans-serif;
    letter-spacing: 0.05em;

    color: antiquewhite;
    padding: 20px;
}

.header {
    padding-bottom: 10px;
}

.scroll-container {
  height: 60vh;
  overflow-y: scroll;
}

section {
  height: 60vh;
  padding: 1rem;
  background-color: rgba(240, 117, 24, 1);
  border: solid;
  border-width: 0.5px;
  border-color: white;
}

section:nth-child(2n) {
  background-color: rgba(171, 72, 196, 1);
}

section:nth-child(3n) {
  background-color: rgba(21, 209, 177, 1);
}

.form-bg {
    background: url("../images/form-bg.jpg") no-repeat center center fixed;
    display: flex;
    justify-content: center;
}

.footer {
    font-family: "Amatic SC", sans-serif;
    background-color:rgba(21, 209, 177, 1);

}
.footer a {
    font-size: 36px;
    color: black;
}

.social-links li a i {
    width: 36px;
    height: 36px;
    padding: 12px 0;
    font-size: 24px;
    line-height: 12px;
    color: black;
}


@media (min-width: 1050px) {
    .carousel-item img {
        width: 100%;
    }
}

@media (min-width: 464px) {
    .col-btn {
    padding: 20px;
}
}
@media (max-width: 464px) {
    .col-btn {
    padding: 5px;
}
}

